// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SoloMovie should render correctly in "debug" mode 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SoloMovie
    debug={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {},
    "ref": null,
    "rendered": null,
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`should render correctly with given props 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SoloMovie
    movie={
      Object {
        "adult": false,
        "backdrop_path": "/h3KN24PrOheHVYs9ypuOIdFBEpX.jpg",
        "belongs_to_collection": Object {
          "backdrop_path": "/vBSuGU5OyJ5lGamkqXo2kVAe01F.jpg",
          "id": 89137,
          "name": "How to Train Your Dragon Collection",
          "poster_path": "/4tBKIkPLFMkiZETjAMOHNoty8B1.jpg",
        },
        "budget": 129000000,
        "genres": Array [
          Object {
            "id": 16,
            "name": "Animation",
          },
          Object {
            "id": 10751,
            "name": "Family",
          },
          Object {
            "id": 12,
            "name": "Adventure",
          },
        ],
        "homepage": "https://www.howtotrainyourdragon.com/",
        "id": 166428,
        "imdb_id": "tt2386490",
        "original_language": "en",
        "original_title": "How to Train Your Dragon: The Hidden World",
        "overview": "As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.",
        "popularity": 763.258,
        "poster_path": "/xvx4Yhf0DVH8G4LzNISpMfFBDy2.jpg",
        "production_companies": Array [
          Object {
            "id": 521,
            "logo_path": "/kP7t6RwGz2AvvTkvnI1uteEwHet.png",
            "name": "DreamWorks Animation",
            "origin_country": "US",
          },
          Object {
            "id": 20154,
            "logo_path": null,
            "name": "Mad Hatter Entertainment",
            "origin_country": "US",
          },
        ],
        "production_countries": Array [
          Object {
            "iso_3166_1": "US",
            "name": "United States of America",
          },
        ],
        "release_date": "2019-01-03",
        "revenue": 375396270,
        "runtime": 104,
        "spoken_languages": Array [
          Object {
            "iso_639_1": "en",
            "name": "English",
          },
        ],
        "status": "Released",
        "tagline": "The friendship of a lifetime",
        "title": "How to Train Your Dragon: The Hidden World",
        "video": false,
        "vote_average": 7.7,
        "vote_count": 1174,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="movie-header"
        >
          <svg
            className="back-main"
            onClick={[Function]}
            viewBox="0 0 64 64"
          >
            <path
              d="M16 48 L20 48 L6 34 L32 34 L32 30 L6 30 L20 16 L16 16 L0 32 Z"
            />
          </svg>
          <div
            className="movie-bdIMG"
          >
            <ForwardRef(render)
              alt="How to Train Your Dragon: The Hidden World"
              fluid={true}
              rounded={true}
              src="https://image.tmdb.org/t/p/w500/h3KN24PrOheHVYs9ypuOIdFBEpX.jpg"
            />
          </div>
          <div
            className="movie-potIMG"
          >
            <ForwardRef(render)
              alt="How to Train Your Dragon: The Hidden World"
              fluid={true}
              rounded={true}
              src="https://image.tmdb.org/t/p/w500/xvx4Yhf0DVH8G4LzNISpMfFBDy2.jpg"
            />
          </div>
          <div
            className="movie-content-header"
          >
            <h3
              className="movie-title"
            >
              How to Train Your Dragon: The Hidden World
            </h3>
          </div>
          <div
            className="movie-info"
          >
            <div
              className="info-section"
            >
              <span>
                2019
                <svg
                  height="10"
                  width="10"
                >
                  <circle
                    className="info-splitPoint"
                    cx="5.5"
                    cy="4.5"
                    r="1.5"
                  />
                </svg>
                77%
              </span>
            </div>
          </div>
          <div
            className="movie-info"
          >
            <div
              className="info-section"
            >
              <span>
                104
              </span>
            </div>
          </div>
        </div>,
        <div
          className="movie-content"
        >
          <div
            className="plot"
          >
            <label>
              Overview
            </label>
            <p
              style={
                Object {
                  "color": "#9fbbc7",
                  "fontSize": "12px",
                }
              }
            >
              As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.
            </p>
          </div>
        </div>,
      ],
      "className": "movie-card",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <svg
              className="back-main"
              onClick={[Function]}
              viewBox="0 0 64 64"
            >
              <path
                d="M16 48 L20 48 L6 34 L32 34 L32 30 L6 30 L20 16 L16 16 L0 32 Z"
              />
            </svg>,
            <div
              className="movie-bdIMG"
            >
              <ForwardRef(render)
                alt="How to Train Your Dragon: The Hidden World"
                fluid={true}
                rounded={true}
                src="https://image.tmdb.org/t/p/w500/h3KN24PrOheHVYs9ypuOIdFBEpX.jpg"
              />
            </div>,
            <div
              className="movie-potIMG"
            >
              <ForwardRef(render)
                alt="How to Train Your Dragon: The Hidden World"
                fluid={true}
                rounded={true}
                src="https://image.tmdb.org/t/p/w500/xvx4Yhf0DVH8G4LzNISpMfFBDy2.jpg"
              />
            </div>,
            <div
              className="movie-content-header"
            >
              <h3
                className="movie-title"
              >
                How to Train Your Dragon: The Hidden World
              </h3>
            </div>,
            <div
              className="movie-info"
            >
              <div
                className="info-section"
              >
                <span>
                  2019
                  <svg
                    height="10"
                    width="10"
                  >
                    <circle
                      className="info-splitPoint"
                      cx="5.5"
                      cy="4.5"
                      r="1.5"
                    />
                  </svg>
                  77%
                </span>
              </div>
            </div>,
            <div
              className="movie-info"
            >
              <div
                className="info-section"
              >
                <span>
                  104
                </span>
              </div>
            </div>,
          ],
          "className": "movie-header",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <path
                d="M16 48 L20 48 L6 34 L32 34 L32 30 L6 30 L20 16 L16 16 L0 32 Z"
              />,
              "className": "back-main",
              "onClick": [Function],
              "viewBox": "0 0 64 64",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "d": "M16 48 L20 48 L6 34 L32 34 L32 30 L6 30 L20 16 L16 16 L0 32 Z",
              },
              "ref": null,
              "rendered": null,
              "type": "path",
            },
            "type": "svg",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <ForwardRef(render)
                alt="How to Train Your Dragon: The Hidden World"
                fluid={true}
                rounded={true}
                src="https://image.tmdb.org/t/p/w500/h3KN24PrOheHVYs9ypuOIdFBEpX.jpg"
              />,
              "className": "movie-bdIMG",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "alt": "How to Train Your Dragon: The Hidden World",
                "fluid": true,
                "rounded": true,
                "src": "https://image.tmdb.org/t/p/w500/h3KN24PrOheHVYs9ypuOIdFBEpX.jpg",
              },
              "ref": null,
              "rendered": null,
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "defaultProps": undefined,
                "displayName": "Bootstrap(Image)",
                "propTypes": undefined,
                "render": [Function],
              },
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <ForwardRef(render)
                alt="How to Train Your Dragon: The Hidden World"
                fluid={true}
                rounded={true}
                src="https://image.tmdb.org/t/p/w500/xvx4Yhf0DVH8G4LzNISpMfFBDy2.jpg"
              />,
              "className": "movie-potIMG",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "alt": "How to Train Your Dragon: The Hidden World",
                "fluid": true,
                "rounded": true,
                "src": "https://image.tmdb.org/t/p/w500/xvx4Yhf0DVH8G4LzNISpMfFBDy2.jpg",
              },
              "ref": null,
              "rendered": null,
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "defaultProps": undefined,
                "displayName": "Bootstrap(Image)",
                "propTypes": undefined,
                "render": [Function],
              },
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <h3
                className="movie-title"
              >
                How to Train Your Dragon: The Hidden World
              </h3>,
              "className": "movie-content-header",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "How to Train Your Dragon: The Hidden World",
                "className": "movie-title",
              },
              "ref": null,
              "rendered": "How to Train Your Dragon: The Hidden World",
              "type": "h3",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="info-section"
              >
                <span>
                  2019
                  <svg
                    height="10"
                    width="10"
                  >
                    <circle
                      className="info-splitPoint"
                      cx="5.5"
                      cy="4.5"
                      r="1.5"
                    />
                  </svg>
                  77%
                </span>
              </div>,
              "className": "movie-info",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <span>
                  2019
                  <svg
                    height="10"
                    width="10"
                  >
                    <circle
                      className="info-splitPoint"
                      cx="5.5"
                      cy="4.5"
                      r="1.5"
                    />
                  </svg>
                  77%
                </span>,
                "className": "info-section",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "2019",
                    <svg
                      height="10"
                      width="10"
                    >
                      <circle
                        className="info-splitPoint"
                        cx="5.5"
                        cy="4.5"
                        r="1.5"
                      />
                    </svg>,
                    "77%",
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "2019",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <circle
                        className="info-splitPoint"
                        cx="5.5"
                        cy="4.5"
                        r="1.5"
                      />,
                      "height": "10",
                      "width": "10",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "className": "info-splitPoint",
                        "cx": "5.5",
                        "cy": "4.5",
                        "r": "1.5",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "circle",
                    },
                    "type": "svg",
                  },
                  "77%",
                ],
                "type": "span",
              },
              "type": "div",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="info-section"
              >
                <span>
                  104
                </span>
              </div>,
              "className": "movie-info",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <span>
                  104
                </span>,
                "className": "info-section",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": 104,
                },
                "ref": null,
                "rendered": 104,
                "type": "span",
              },
              "type": "div",
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="plot"
          >
            <label>
              Overview
            </label>
            <p
              style={
                Object {
                  "color": "#9fbbc7",
                  "fontSize": "12px",
                }
              }
            >
              As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.
            </p>
          </div>,
          "className": "movie-content",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <label>
                Overview
              </label>,
              <p
                style={
                  Object {
                    "color": "#9fbbc7",
                    "fontSize": "12px",
                  }
                }
              >
                As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.
              </p>,
            ],
            "className": "plot",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Overview",
              },
              "ref": null,
              "rendered": "Overview",
              "type": "label",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.",
                "style": Object {
                  "color": "#9fbbc7",
                  "fontSize": "12px",
                },
              },
              "ref": null,
              "rendered": "As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.",
              "type": "p",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="movie-header"
          >
            <svg
              className="back-main"
              onClick={[Function]}
              viewBox="0 0 64 64"
            >
              <path
                d="M16 48 L20 48 L6 34 L32 34 L32 30 L6 30 L20 16 L16 16 L0 32 Z"
              />
            </svg>
            <div
              className="movie-bdIMG"
            >
              <ForwardRef(render)
                alt="How to Train Your Dragon: The Hidden World"
                fluid={true}
                rounded={true}
                src="https://image.tmdb.org/t/p/w500/h3KN24PrOheHVYs9ypuOIdFBEpX.jpg"
              />
            </div>
            <div
              className="movie-potIMG"
            >
              <ForwardRef(render)
                alt="How to Train Your Dragon: The Hidden World"
                fluid={true}
                rounded={true}
                src="https://image.tmdb.org/t/p/w500/xvx4Yhf0DVH8G4LzNISpMfFBDy2.jpg"
              />
            </div>
            <div
              className="movie-content-header"
            >
              <h3
                className="movie-title"
              >
                How to Train Your Dragon: The Hidden World
              </h3>
            </div>
            <div
              className="movie-info"
            >
              <div
                className="info-section"
              >
                <span>
                  2019
                  <svg
                    height="10"
                    width="10"
                  >
                    <circle
                      className="info-splitPoint"
                      cx="5.5"
                      cy="4.5"
                      r="1.5"
                    />
                  </svg>
                  77%
                </span>
              </div>
            </div>
            <div
              className="movie-info"
            >
              <div
                className="info-section"
              >
                <span>
                  104
                </span>
              </div>
            </div>
          </div>,
          <div
            className="movie-content"
          >
            <div
              className="plot"
            >
              <label>
                Overview
              </label>
              <p
                style={
                  Object {
                    "color": "#9fbbc7",
                    "fontSize": "12px",
                  }
                }
              >
                As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.
              </p>
            </div>
          </div>,
        ],
        "className": "movie-card",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <svg
                className="back-main"
                onClick={[Function]}
                viewBox="0 0 64 64"
              >
                <path
                  d="M16 48 L20 48 L6 34 L32 34 L32 30 L6 30 L20 16 L16 16 L0 32 Z"
                />
              </svg>,
              <div
                className="movie-bdIMG"
              >
                <ForwardRef(render)
                  alt="How to Train Your Dragon: The Hidden World"
                  fluid={true}
                  rounded={true}
                  src="https://image.tmdb.org/t/p/w500/h3KN24PrOheHVYs9ypuOIdFBEpX.jpg"
                />
              </div>,
              <div
                className="movie-potIMG"
              >
                <ForwardRef(render)
                  alt="How to Train Your Dragon: The Hidden World"
                  fluid={true}
                  rounded={true}
                  src="https://image.tmdb.org/t/p/w500/xvx4Yhf0DVH8G4LzNISpMfFBDy2.jpg"
                />
              </div>,
              <div
                className="movie-content-header"
              >
                <h3
                  className="movie-title"
                >
                  How to Train Your Dragon: The Hidden World
                </h3>
              </div>,
              <div
                className="movie-info"
              >
                <div
                  className="info-section"
                >
                  <span>
                    2019
                    <svg
                      height="10"
                      width="10"
                    >
                      <circle
                        className="info-splitPoint"
                        cx="5.5"
                        cy="4.5"
                        r="1.5"
                      />
                    </svg>
                    77%
                  </span>
                </div>
              </div>,
              <div
                className="movie-info"
              >
                <div
                  className="info-section"
                >
                  <span>
                    104
                  </span>
                </div>
              </div>,
            ],
            "className": "movie-header",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <path
                  d="M16 48 L20 48 L6 34 L32 34 L32 30 L6 30 L20 16 L16 16 L0 32 Z"
                />,
                "className": "back-main",
                "onClick": [Function],
                "viewBox": "0 0 64 64",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "d": "M16 48 L20 48 L6 34 L32 34 L32 30 L6 30 L20 16 L16 16 L0 32 Z",
                },
                "ref": null,
                "rendered": null,
                "type": "path",
              },
              "type": "svg",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <ForwardRef(render)
                  alt="How to Train Your Dragon: The Hidden World"
                  fluid={true}
                  rounded={true}
                  src="https://image.tmdb.org/t/p/w500/h3KN24PrOheHVYs9ypuOIdFBEpX.jpg"
                />,
                "className": "movie-bdIMG",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "alt": "How to Train Your Dragon: The Hidden World",
                  "fluid": true,
                  "rounded": true,
                  "src": "https://image.tmdb.org/t/p/w500/h3KN24PrOheHVYs9ypuOIdFBEpX.jpg",
                },
                "ref": null,
                "rendered": null,
                "type": Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "defaultProps": undefined,
                  "displayName": "Bootstrap(Image)",
                  "propTypes": undefined,
                  "render": [Function],
                },
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <ForwardRef(render)
                  alt="How to Train Your Dragon: The Hidden World"
                  fluid={true}
                  rounded={true}
                  src="https://image.tmdb.org/t/p/w500/xvx4Yhf0DVH8G4LzNISpMfFBDy2.jpg"
                />,
                "className": "movie-potIMG",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "alt": "How to Train Your Dragon: The Hidden World",
                  "fluid": true,
                  "rounded": true,
                  "src": "https://image.tmdb.org/t/p/w500/xvx4Yhf0DVH8G4LzNISpMfFBDy2.jpg",
                },
                "ref": null,
                "rendered": null,
                "type": Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "defaultProps": undefined,
                  "displayName": "Bootstrap(Image)",
                  "propTypes": undefined,
                  "render": [Function],
                },
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <h3
                  className="movie-title"
                >
                  How to Train Your Dragon: The Hidden World
                </h3>,
                "className": "movie-content-header",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "How to Train Your Dragon: The Hidden World",
                  "className": "movie-title",
                },
                "ref": null,
                "rendered": "How to Train Your Dragon: The Hidden World",
                "type": "h3",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="info-section"
                >
                  <span>
                    2019
                    <svg
                      height="10"
                      width="10"
                    >
                      <circle
                        className="info-splitPoint"
                        cx="5.5"
                        cy="4.5"
                        r="1.5"
                      />
                    </svg>
                    77%
                  </span>
                </div>,
                "className": "movie-info",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <span>
                    2019
                    <svg
                      height="10"
                      width="10"
                    >
                      <circle
                        className="info-splitPoint"
                        cx="5.5"
                        cy="4.5"
                        r="1.5"
                      />
                    </svg>
                    77%
                  </span>,
                  "className": "info-section",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "2019",
                      <svg
                        height="10"
                        width="10"
                      >
                        <circle
                          className="info-splitPoint"
                          cx="5.5"
                          cy="4.5"
                          r="1.5"
                        />
                      </svg>,
                      "77%",
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "2019",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <circle
                          className="info-splitPoint"
                          cx="5.5"
                          cy="4.5"
                          r="1.5"
                        />,
                        "height": "10",
                        "width": "10",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "className": "info-splitPoint",
                          "cx": "5.5",
                          "cy": "4.5",
                          "r": "1.5",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "circle",
                      },
                      "type": "svg",
                    },
                    "77%",
                  ],
                  "type": "span",
                },
                "type": "div",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="info-section"
                >
                  <span>
                    104
                  </span>
                </div>,
                "className": "movie-info",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <span>
                    104
                  </span>,
                  "className": "info-section",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": 104,
                  },
                  "ref": null,
                  "rendered": 104,
                  "type": "span",
                },
                "type": "div",
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="plot"
            >
              <label>
                Overview
              </label>
              <p
                style={
                  Object {
                    "color": "#9fbbc7",
                    "fontSize": "12px",
                  }
                }
              >
                As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.
              </p>
            </div>,
            "className": "movie-content",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <label>
                  Overview
                </label>,
                <p
                  style={
                    Object {
                      "color": "#9fbbc7",
                      "fontSize": "12px",
                    }
                  }
                >
                  As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.
                </p>,
              ],
              "className": "plot",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Overview",
                },
                "ref": null,
                "rendered": "Overview",
                "type": "label",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.",
                  "style": Object {
                    "color": "#9fbbc7",
                    "fontSize": "12px",
                  },
                },
                "ref": null,
                "rendered": "As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.",
                "type": "p",
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`should render correctly with no props 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SoloMovie />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {},
    "ref": null,
    "rendered": null,
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
